--- a/package.json
+++ b/package.json
@@ -10,16 +10,25 @@
   },
   "dependencies": {
     "@clerk/nextjs": "^5.7.1",
+    "@emotion/react": "^11.13.3",
+    "@emotion/styled": "^11.13.0",
     "@fortawesome/fontawesome": "^1.1.8",
     "@fortawesome/fontawesome-svg-core": "^6.6.0",
     "@fortawesome/free-brands-svg-icons": "^6.6.0",
     "@fortawesome/free-regular-svg-icons": "^6.6.0",
     "@fortawesome/free-solid-svg-icons": "^6.6.0",
     "@fortawesome/react-fontawesome": "^0.2.2",
+    "@mui/icons-material": "^6.1.3",
+    "@mui/material": "^6.1.3",
+    "@mui/styled-engine-sc": "^6.1.3",
+    "@mui/x-date-pickers": "^7.20.0",
+    "dayjs": "^1.11.13",
     "mongoose": "^8.7.0",
     "next": "14.2.14",
     "react": "^18",
     "react-dom": "^18",
+    "recharts": "^2.13.0",
+    "styled-components": "^6.1.13",
     "svix": "^1.37.0"
   },
   "devDependencies": {
