--- a/package.json
+++ b/package.json
@@ -27,9 +27,11 @@
     "next": "14.2.14",
     "react": "^18",
     "react-dom": "^18",
+    "react-hot-toast": "^2.4.1",
     "recharts": "^2.13.0",
     "styled-components": "^6.1.13",
-    "svix": "^1.37.0"
+    "svix": "^1.37.0",
+    "uuid": "^11.0.3"
   },
   "devDependencies": {
     "@types/node": "^20",
